# ChatRoulette

./: Cargo.toml  README.md  cookie1.txt  cookie2.txt  cookie3.txt  cookie4.txt  test.py
site/: .index.html.swp  index.html
src/: .main.rs.swp  main.rs
src/template/: .index.tera.swp  index.html  index.tera  messages.tera
