[package]
name = "strangerdanger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.1"
headers = "0.4.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.209", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
