[package]
name = "strangerdanger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.1"
captcha = "0.0.9"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
headers = "0.4.0"
log = "0.4.22"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.209", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
url = "2.5.2"
